--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
+    "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
+    "clean": "rm -rf .next && rm -rf node_modules && npm install",
     "lint": "eslint .",
     "test": "echo \"No tests configured yet\" && exit 0"
   },
@@ -14,6 +17,7 @@
     "gray-matter": "^4.0.3",
     "next": "15.5.0",
     "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "resend": "^6.0.1"
